[Correction] Copywrite text overlaping Fixed

--- a/static_resources/scss/time_ui.scss
+++ b/static_resources/scss/time_ui.scss
@@ -33,6 +33,10 @@ html, body {
     font-family: 'product-sans';
     letter-spacing: 0.2vw;
     user-select: none;
+
+    @media only screen and (max-width: 600px)  {
+        height: 100vh;
+    }
 }
 
 h1, h2, h3, h4, h5, h6, p {
